  characters; if not, it parses it without decompression, instead of
  throwing an exception.

- Multiple monitors should work properly now (Kris Kopicki).

- Selecting "Search in Directory" from the right-click menu of a
  directory in the parent directories list would search in the wrong
  directory.

- Fixed problems with bracket matching not being activated when
  switching between split panes.

- Not all keyboard shortcuts worked in the Complete Word popup.

- Closing a view did not close any cloned dockable windows.

- Page Up/Page Down commands now scroll by the correct amount when soft
  wrap is on.

- Fixed I/O thread deadlock that could manifest when using the FTP
  plugin.

- Fixed initial position of options dialog box divider.

}}}
{{{ API Changes

- Removed some methods which do not make any sense at all with the new
  display engine:

  JEditTextArea.virtualToPhysical()
  JEditTextArea.physicalToVirtual()
  JEditTextArea.getVirtualLineCount()
  JEditTextArea.xToOffset() (was already deprecated)
  JEditTextArea.offsetToX() (was already deprecated)

- The FoldVisibilityManager class has been replaced with a
  DisplayManager class; obtain an instance by calling
  JEditTextArea.getDisplayManager().

- The concept of "virtual line numbers" is gone.
  JEditTextArea.get/setFirstLine() now takes a vertical scroll bar
  position that takes hidden lines as well as lines split by soft wrap
  into account. Currently, no public API exists to covert between
  scroll line numbers and physical line numbers, however there is a new
  JEditTextArea.setFirstPhysicalLine() method.

}}}
{{{ API Enhancements

- Added VFS.DirectoryEntryCompare class.

- Added View.goToBuffer() method. If the specified buffer is already
  visible in one of the view's edit panes, sends focus to that edit
  pane. Otherwise, calls setBuffer() on the current edit pane.

}}}

jEdit buffer local properties:
:wrap=hard:folding=explicit:maxLineLen=72:indentSize=2: